--- a/styles.css
+++ b/styles.css
@@ -198,35 +198,6 @@ main h1 {
     color: #0056b3;
 }
 
-.carousel-control {
-    background: rgba(255, 255, 255, 0.8);
-    border: none;
-    color: #000;
-    font-size: 24px;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
-    z-index: 2;
-    padding: 10px;
-    border-radius: 50%;
-    transition: background 0.3s ease;
-}
-
-.carousel-control:hover {
-    background: rgba(255, 255, 255, 1);
-}
-
-.carousel-control.left {
-    left: 20px;
-    background: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
-}
-
-.carousel-control.right {
-    right: 20px;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
-}
-
 
 
 
@@ -372,3 +343,60 @@ main h1 {
     color: #0056b3;
 }
 
+
+
+
+/* SPECIFIC PROJECTS PAGE */
+.content-container {
+    display: flex; 
+    justify-content: space-between; 
+    align-items: flex-start; 
+    gap: 20px; 
+    max-width: 1400px; 
+    margin: 20px auto; 
+    padding-top: 30px;
+    flex-wrap: nowrap;
+}
+
+.slideshow {
+    flex-shrink: 0;
+    width: 780px; 
+    height: 500px;
+    border-radius: 10px; 
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: pointer; 
+}
+
+.slides-container {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+    width: calc(780px * 6); 
+}
+
+.slide {
+    min-width: 780px;
+    height: 500px;
+    display: none;
+}
+
+.slide.active {
+    display: block; 
+}
+
+.description {
+    flex: 1; 
+    padding: 20px;
+    text-align: center;
+    align-items: center;
+}
+
+.description h1 {
+    font-size: 36px;
+    margin-bottom: 20px;
+}
+
+.description p {
+    font-size: 18px;
+    line-height: 1.6;
+}
