--- a/styles.css
+++ b/styles.css
@@ -347,41 +347,88 @@ main h1 {
 
 
 /* SPECIFIC PROJECTS PAGE */
-.content-container {
+.main-container {
     display: flex; 
     justify-content: space-between; 
-    align-items: flex-start; 
-    gap: 20px; 
+    align-items: center; 
+    gap: 5px; 
     max-width: 1400px; 
     margin: 20px auto; 
     padding-top: 30px;
     flex-wrap: nowrap;
 }
 
-.slideshow {
-    flex-shrink: 0;
-    width: 780px; 
-    height: 500px;
-    border-radius: 10px; 
-    overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    cursor: pointer; 
-}
-
-.slides-container {
+.slideshow-wrapper {
     display: flex;
-    transition: transform 0.5s ease-in-out;
-    width: calc(780px * 6); 
+    flex-direction: column; 
+    align-items: center;
 }
 
-.slide {
-    min-width: 780px;
-    height: 500px;
+.slideshow-container {
+    max-width: 780px;
+    position: relative;
+    margin: auto; 
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+}
+
+.slideshow-container img {
+    border-radius: 15px;
+}
+
+.mySlides {
     display: none;
 }
+  
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 0%;
+    width: auto;
+    padding: 16px;
+    padding-top: 250px;
+    padding-bottom: 250px;
+    user-select: none;
+    z-index: 1000;
+}
+  
+.next {
+    right: 0;
+    padding-left: 60px;
+}
+  
+.prev {
+    left: 0;
+    padding-right: 60px;
+}
 
-.slide.active {
-    display: block; 
+.dots-container {
+    margin-top: 10px;
+}
+  
+.dot {
+    cursor: pointer;
+    height: 10px;
+    width: 10px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+  
+.dot:hover {
+    background-color: #717171;
+}
+  
+.fade {
+    animation-name: fade;
+    animation-duration: 2s;
+}
+  
+@keyframes fade {
+    from { opacity: 0.7; }
+    to { opacity: 1; }
 }
 
 .description {
@@ -389,6 +436,7 @@ main h1 {
     padding: 20px;
     text-align: center;
     align-items: center;
+    justify-content: center;
 }
 
 .description h1 {
