--- a/styles.css
+++ b/styles.css
@@ -62,12 +62,14 @@ header::after {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 0;
     margin: 0 20px;
+    height: 50px;
+    width: 50px;
 }
 
 .logo img {
-    height: 50px;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 .nav-links li {
@@ -129,7 +131,9 @@ main h1 {
     text-align: center;
 }
 
-/* text */
+
+
+/* PROJECTS */
 .projects-carousel {
     margin-top: -35px;
     position: relative;
@@ -201,7 +205,7 @@ main h1 {
 
 
 
-/* Gallery */
+/* GALLERY */
 .gallery-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
@@ -346,7 +350,7 @@ main h1 {
 
 
 
-/* SPECIFIC PROJECTS PAGE */
+/* PROJECT DETAILS PAGE */
 .main-container {
     display: flex; 
     justify-content: space-between; 
